<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Motorcycle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30px"
        android:paddingTop="30px"
        android:paddingRight="30px">

        <Button
            android:id="@+id/btnTZR125"
            android:layout_marginTop="30px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnTZR125" />

        <Button
            android:id="@+id/btnR1"
            android:layout_marginTop="30px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnR1" />

        <Button
            android:id="@+id/btnGSXR1000"
            android:layout_marginTop="30px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGSXR1000" />

        <Button
            android:id="@+id/btnCBR600"
            android:layout_marginTop="30px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCBR600" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>