<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TwoStroke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="200px"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="30px"
            android:layout_marginRight="30px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/OilRatio"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:entries="@array/ratio2T" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="30px"
            android:layout_marginRight="30px"
            android:layout_marginBottom="30px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/PetrolLiters"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ilośćPaliwa"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/inputPetrol"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="l."
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:layout_weight="1"
                android:text="@string/btnResult" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>